--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,20 +12,20 @@
 </head>
 <body>
 <div class="container my-2">
-    <h1>Employees List</h1>
+    <h1>User List</h1>
     <table class = "table table-striped table-responsive-md">
         <thead>
         <tr>
-            <th>Employee First Name</th>
-            <th>Employee Last Name</th>
-            <th>Employee Email</th>
+            <th>User First Name</th>
+            <th>User Last Name</th>
+            <th>User Email</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="employee : ${listEmployees}">
-            <td th:text="${employee.firstName}"></td>
-            <td th:text="${employee.lastName}"></td>
-            <td th:text="${employee.email}"></td>
+        <tr th:each="user : ${listUsers}">
+            <td th:text="${user.firstName}"></td>
+            <td th:text="${user.lastName}"></td>
+            <td th:text="${user.email}"></td>
         </tr>
         </tbody>
     </table>
