--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 <div class="container my-2">
+
     <h1>User List</h1>
+
+    <a th:href = "@{/showNewUserForm}" class="btn btn-primary btn-sm mb-3"> Add User</a>
     <table class = "table table-striped table-responsive-md">
         <thead>
         <tr>
