--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -13,11 +13,13 @@
     <div class="container my-2">
         <a th:href = "@{/newTaskForm}" class="btn btn-primary btn-sm mb-3"> Add Task</a>
         <h1> Tasks List</h1>
-        <table border="1" class = "table table-striped table-responsive-md">
+        <table class = "table table-striped table-responsive-md">
             <thead>
                 <tr>
                     <th> Task Name</th>
+                    <th></th>
                     <th> Task Description </th>
+                    <th></th>
                     <th> Actions</th>
                 </tr>
             </thead>
