fixed shit I broke yesterday

--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -27,7 +27,9 @@
                 <tr th:each="task : ${listTasks}">
                     <td th:text="${task.name}"><td>
                     <td th:text="${task.description}"><td>
-                    <td> <a th:href="@{/showFormForUpdate/{id}(id=${task.id})}" class="btn btn-primary">Update</a></td>
+                    <td> <a th:href="@{/showFormForUpdate/{id}(id=${task.id})}" class="btn btn-primary">Update</a>
+                        <a th:href="@{/deleteTask/{id}(id=${task.id})}" class="btn btn-danger">Delete</a>
+                </td>
                 </tr>
             </tbody>
         </table>
